--- a/LESS/navigation.less
+++ b/LESS/navigation.less
@@ -139,6 +139,11 @@ header {
     h1 {
       word-spacing: 2rem;
       color: @color;
+
+      @media @phone {
+        font-size: 1.2rem;
+        word-spacing: unset;
+      }
     }
     p {
       padding: 0.5rem 1rem;
